# xepor

./: .coveragerc  .gitignore  .gitmodules  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  python-package.yml  test.yml
docs/: conf.py  index.md  requirements.txt
docs/api/: modules.rst
src/xepor/: __init__.py  skeleton.py  xepor.py
tests/: conftest.py  test_examples.py  test_single.py  test_skeleton.py  tserver.py
